# collaborative-secure-tunnel

./: CMakeLists.txt  README.md
src/: app_config.hpp  control_protocol.cpp  control_protocol.hpp  framing.cpp  framing.hpp  io_bridge.cpp  io_bridge.hpp  listener.cpp  listener.hpp  listener_win.cpp  main.cpp  pty_handler.cpp  pty_handler.hpp  pty_handler_win.cpp  resize_coalescer.cpp  resize_coalescer.hpp  resize_coalescer_win.cpp  session_manager.cpp  session_manager.hpp  signal_handler.cpp  signal_handler.hpp  tls_wrapper.cpp  tls_wrapper.hpp  utils.cpp  utils.hpp
